# codeforces_solutions

./: CMakeLists.txt  apr12.cpp  apr19.cpp  apr26.cpp  apr5.cpp  aug22.cpp  dec21.cpp  feb14.cpp  feb22.cpp  input.txt  jan5_2022.cpp  july19.cpp  jun14.cpp  jun21.cpp  jun22.cpp  jun7.cpp  main.cpp  mar15.cpp  mar23.cpp  mar29.cpp  mar3.cpp  mar8.cpp  may10.cpp  may10_2.cpp  may17.cpp  may17_1.cpp  may20.cpp  may24.cpp  may31.cpp  test.cpp
