cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(codeforces_problems main.cpp dec21.cpp jan5_2022.cpp feb14.cpp feb22.cpp mar3.cpp mar8.cpp mar15.cpp mar23.cpp mar29.cpp apr5.cpp apr12.cpp apr19.cpp apr26.cpp may10.cpp may10_2.cpp may17.cpp may17_1.cpp may20.cpp may24.cpp may31.cpp jun7.cpp)